--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <body class = "body">
         
         <div id="smooth" class = "main_pic" align-items-center >
-            <video video src = "/proj/images/splash.m4v" autoplay muted width = 100%>    </video>
+            <video video src = "/images/splash.m4v" autoplay muted width = 100%>    </video>
             <h1  class="splash_logo"><a href = "/proj/include/header.php">Жопа</a></h1>
             <h2  class="splash_logo"><a href = "#yak2">Жопа2</a></h2>
             <h3  class="splash_logo"><a href = "#yak3">Жопа3</a></h3>
